--- a/source/index.html
+++ b/source/index.html
@@ -3,10 +3,82 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+
+  <body class="container">
+    <header class="page-header">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+          alt="Логотип сайта Кэт энерджи">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--current">
+              <a>главная</a>
+            </li>
+            <li class="site-list__item">
+              <a href="catalog.html">каталог продукции</a>
+            </li>
+            <li class="site-list__item">
+              <a href="form.html">подбор программы</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main class="page-main">
+      <section class="intro">
+        <h1 class="intro__title">Функциональное питание для котов</h1>
+        <p class="intro__text">занялся собой? займись котом!</p>
+        <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
+        alt="Приглашение посетить Седону">
+        <button class="button button--green intro__button" type="button">Подобрать программу</button>
+      </section>
+      <section class="program-selection">
+        <h2 class="visually-hidden">Корм для котов компании Cat Energy</h2>
+        <ul class="program-selection__list">
+          <li class="program-selection__item">
+            <h3 class="program-selection__slim">похудение</h3>
+            <p class="program-selection__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
+              деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program-selection__link" href="catalog.html#slim">каталог slim</a>
+          </li>
+          <li class="program-selection__item">
+            <h3 class="program-selection__pro">набор массы</h3>
+            <p class="program-selection__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+              Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="program-selection__link" href="catalog.html#pro">каталог pro</a>
+          </li>
+        </ul>
+      </section>
+      <section class="description">
+        <h2 class="description__title">Как это работает</h2>
+        <ul class="description__list">
+          <li class="description__item">
+           <p class="description__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="description__item">
+            <p class="description__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+           </li>
+           <li class="description__item">
+            <p class="description__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+           </li>
+           <li class="description__item">
+            <p class="description__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+           </li>
+        </ul>
+      </section>
+
+    </main>
 
   </body>
 </html>
