доделала разметку главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи, главная страница</title>
+    <title>HTML Academy: Кэт энерджи, форма</title>
     <meta name="viewport" content="width
     =device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
@@ -21,11 +21,11 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--current">
-              <a>главная</a>
+            <li class="site-list__item">
+              <a a href="index.html">главная</a>
             </li>
             <li class="site-list__item">
-              <a href="catalog.html">каталог продукции</a>
+              <a href="catalog.html site-list__item--current">каталог продукции</a>
             </li>
             <li class="site-list__item">
               <a href="form.html">подбор программы</a>
