--- a/source/catalog.html
+++ b/source/catalog.html
@@ -36,7 +36,201 @@
     </header>
 
     <main class="page-main">
-
+      <h1 class="catalog-title">Каталог продукции</h1>
+      <section class="main-products">
+        <h2 clas="visually-hidden">Основные товары</h2>
+        <ul class="main-products__list">
+          <li class="main-products__item">
+           <div class="main-products__image">
+             <a href="chicken-small.html">
+              <img class="main-products__chicken-small" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
+              alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
+             </a>
+           </div>
+           <div>
+            <a href="chicken-small.html">
+              <h3 class="main-products__item-title">cat energy pro 500 г</h3>
+            </a>
+             <table class="main-products__data">
+               <tr>
+                 <td>Объем</td>
+                 <td>500 г</td>
+               </tr>
+               <tr>
+                <td>Вкус</td>
+                <td>Курица</td>
+              </tr>
+              <tr>
+                <td>Цена</td>
+                <td>700 Р.</td>
+              </tr>
+             </table>
+           </div>
+          </li>
+          <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="chicken-big.html">
+                <img class="main-products__chicken-big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144"
+                  alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
+              </a>
+            </div>
+            <div>
+              <a href="chicken-big.html">
+                <h3 class="main-products__item-title">cat energy pro 1000 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Курица</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>1000 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+           <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="fish-small.html">
+                <img class="main-products__fish-small" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
+                alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
+              </a>
+            </div>
+            <div>
+              <a href="fish-small.html">
+                <h3 class="main-products__item-title">cat energy pro 500 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Рыба</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>700 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+           <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="fish-big.html">
+                <img class="main-products__fish-big" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
+                alt="Банка питания Кэт энерджи со вкусом рыбы объемом 1000 г">
+              </a>
+            </div>
+            <div>
+              <a href="fish-big.html">
+                <h3 class="main-products__item-title">cat energy pro 1000 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Рыба</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>1000 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+           <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="buckwheat-small.html">
+                <img class="main-products__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144"
+                alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
+              </a>
+            </div>
+            <div>
+              <a href="buckwheat-small.html">
+                <h3 class="main-products__item-title">cat energy slim 500 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Гречка</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>400 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+           <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="buckwheat.html">
+                <img class="main-products__buckwheat-big" src="img/buckwheat-big-mobile@1x.png" width="140" height="144"
+                alt="Банка питания Кэт энерджи со вкусом гречки объемом 1000 г">
+              </a>
+            </div>
+            <div>
+              <a href="buckwheat.html">
+                <h3 class="main-products__item-title">cat energy slim 500 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Гречка</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>700 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+           <li class="main-products__item">
+            <div class="main-products__image">
+              <a href="rice-small.html">
+                <img class="main-products__rice-small" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
+                alt="Банка питания Кэт энерджи со вкусом риса объемом 500 г">
+              </a>
+            </div>
+            <div>
+              <a href="rice-small.html">
+                <h3 class="main-products__item-title">cat energy slim 500 г</h3>
+              </a>
+              <table class="main-products__data">
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                 <td>Вкус</td>
+                 <td>Рис</td>
+               </tr>
+               <tr>
+                 <td>Цена</td>
+                 <td>500 Р.</td>
+               </tr>
+              </table>
+            </div>
+           </li>
+        </ul>
+      </section>
 
     </main>
 
