--- a/source/index.html
+++ b/source/index.html
@@ -41,7 +41,7 @@
         <p class="intro__text">занялся собой? займись котом!</p>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
         alt="Рекламный образец продукции компании Кэт энерджи">
-        <button class="button button--green intro__button" type="button">Подобрать программу</button>
+        <a href="catalog.html" class="button button--green intro__button" type="button">Подобрать программу</a>
       </section>
       <section class="program-selection">
         <h2 class="visually-hidden">Корм для котов компании Кэт энерджи</h2>
@@ -128,41 +128,43 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer__logo">
-        <a class="page-footer__logo-link">
-          <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24"
-            alt="Упрощённый логотип сайта Кэт энерджи">
-        </a>
-      </div>
-      <div class="page-footer__social social">
-        <h2 class="visually-hidden social__title">Кэт энерджи в соцсетях</h2>
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Кэт энерджи в Вконтакте</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Кэт энерджи в
-              Инстаграме</a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Кэт энерджи в
-              Фейсбуке</a>
-          </li>
-        </ul>
-      </div>
-      <div class="page-footer__copyright copyright">
-        <p class="copyright__text">HTML Academy</p>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-          target="_blank">
-          <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
-            <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399
-                  12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02
-                  3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014
-                  1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48
-                  8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025
-                  8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z" />
-          </svg>
-        </a>
+      <div class="page-footer__wrapper">
+        <div class="page-footer__logo">
+          <a class="page-footer__logo-link">
+            <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24"
+              alt="Упрощённый логотип сайта Кэт энерджи">
+          </a>
+        </div>
+        <div class="page-footer__social social">
+          <h2 class="visually-hidden social__title">Кэт энерджи в соцсетях</h2>
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Кэт энерджи в Вконтакте</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Кэт энерджи в
+                Инстаграме</a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Кэт энерджи в
+                Фейсбуке</a>
+            </li>
+          </ul>
+        </div>
+        <div class="page-footer__copyright copyright">
+          <p class="copyright__text">HTML Academy</p>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
+            target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26.943" height="34.09" viewBox="0 0 26.943 34.09">
+              <path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399
+                        12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02
+                        3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014
+                        1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48
+                        8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025
+                        8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z" />
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
 
