--- a/source/index.html
+++ b/source/index.html
@@ -40,8 +40,8 @@
         <h1 class="intro__title">Функциональное питание для котов</h1>
         <p class="intro__text">занялся собой? займись котом!</p>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
-        alt="Рекламный образец продукции компании Кэт энерджи">
-        <a href="catalog.html" class="button button--green intro__button" type="button">Подобрать программу</a>
+        alt="Рекламный образец продукции компании Кэт энерд жи">
+        <a href="catalog.html" class="intro__button button" type="button">Подобрать программу</a>
       </section>
       <section class="program-selection">
         <h2 class="visually-hidden">Корм для котов компании Кэт энерджи</h2>
