сделала разметку формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -47,7 +47,7 @@
               alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
              </a>
            </div>
-           <div class="main-products__info">
+           <div class="main-products__info" id="pro">
             <a href="chicken-small.html">
               <h3 class="main-products__item-title">cat energy pro 500 г</h3>
             </a>
@@ -167,7 +167,7 @@
                 alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products__info" id="slim">
               <a href="buckwheat-small.html">
                 <h3 class="main-products__item-title">cat energy slim 500 г</h3>
               </a>
