--- a/source/index.html
+++ b/source/index.html
@@ -41,10 +41,10 @@
         <p class="intro__text">занялся собой? займись котом!</p>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
         alt="Рекламный образец продукции компании Кэт энерд жи">
-        <a href="catalog.html" class="intro__button button" type="button">Подобрать программу</a>
+        <a href="form.html" class="intro__button button" type="button">Подобрать программу</a>
       </section>
       <section class="program-selection">
-        <h2 class="visually-hidden">Корм для котов компании Кэт энерджи</h2>
+        <h2 class="program-selection__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
         <ul class="program-selection__list">
           <li class="program-selection__item">
             <h3 class="program-selection__slim">похудение</h3>
