--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,7 +18,7 @@
           alt="Логотип сайта Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <button class="button main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
@@ -39,19 +39,19 @@
       <h1 class="page-main__title">Каталог продукции</h1>
       <section class="main-products">
         <h2 clas="main-products__title visually-hidden">Основные товары</h2>
-        <ul class="main-products__list">
-          <li class="main-products__item">
-           <div class="main-products__image">
+        <ul class="main-products__list main-products-list">
+          <li class="main-products-list__item">
+           <div class="main-products-list__image">
              <a href="chicken-small.html">
-              <img class="main-products__chicken-small" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
+              <img class="main-products-list__chicken-small" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
               alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 500 г">
              </a>
            </div>
-           <div class="main-products__info" id="pro">
+           <div class="main-products-list__info" id="pro">
             <a href="chicken-small.html">
-              <h3 class="main-products__item-title">cat energy pro 500 г</h3>
+              <h3 class="main-products-list__item-title">cat energy pro 500 г</h3>
             </a>
-             <table class="main-products__data">
+             <table class="main-products-list__data">
                <tr>
                  <td>Объем</td>
                  <td>500 г</td>
@@ -66,22 +66,22 @@
               </tr>
              </table>
            </div>
-           <div class="main-products__booking">
-             <a class="main-products__link" href="booking.html">заказать</a>
+           <div class="main-products-list__booking">
+             <a class="button main-products-list__link" href="booking.html">заказать</a>
            </div>
           </li>
-          <li class="main-products__item">
-            <div class="main-products__image">
+          <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="chicken-big.html">
-                <img class="main-products__chicken-big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144"
+                <img class="main-products-list__chicken-big" src="img/chicken-big-mobile@1x.jpg" width="140" height="144"
                   alt="Банка питания Кэт энерджи Pro со вкусом курицы объемом 1000 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products-list__info">
               <a href="chicken-big.html">
-                <h3 class="main-products__item-title">cat energy pro 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>1000 г</td>
@@ -96,22 +96,22 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-           <li class="main-products__item">
-            <div class="main-products__image">
+           <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="fish-small.html">
-                <img class="main-products__fish-small" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
+                <img class="main-products-list__fish-small" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
                 alt="Банка питания Кэт энерджи со вкусом рыбы объемом 500 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products-list__info">
               <a href="fish-small.html">
-                <h3 class="main-products__item-title">cat energy pro 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 500 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>500 г</td>
@@ -126,22 +126,22 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-           <li class="main-products__item">
-            <div class="main-products__image">
+           <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="fish-big.html">
-                <img class="main-products__fish-big" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
+                <img class="main-products-list__fish-big" src="img/fish-big-mobile@1x.jpg" width="140" height="144"
                 alt="Банка питания Кэт энерджи со вкусом рыбы объемом 1000 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products-list__info">
               <a href="fish-big.html">
-                <h3 class="main-products__item-title">cat energy pro 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy pro 1000 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>1000 г</td>
@@ -156,22 +156,22 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-           <li class="main-products__item">
-            <div class="main-products__image">
+           <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="buckwheat-small.html">
-                <img class="main-products__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144"
+                <img class="main-products-list__buckwheat-small" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144"
                 alt="Банка питания Кэт энерджи со вкусом гречки объемом 500 г">
               </a>
             </div>
-            <div class="main-products__info" id="slim">
+            <div class="main-products-list__info" id="slim">
               <a href="buckwheat-small.html">
-                <h3 class="main-products__item-title">cat energy slim 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>500 г</td>
@@ -186,22 +186,22 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-           <li class="main-products__item">
-            <div class="main-products__image">
+           <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="buckwheat-big.html">
-                <img class="main-products__buckwheat-big" src="img/buckwheat-big-mobile@1x.png" width="140" height="144"
+                <img class="main-products-list__buckwheat-big" src="img/buckwheat-big-mobile@1x.png" width="140" height="144"
                 alt="Банка питания Кэт энерджи со вкусом гречки объемом 1000 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products-list__info">
               <a href="buckwheat-big.html">
-                <h3 class="main-products__item-title">cat energy slim 1000 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 1000 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>1000 г</td>
@@ -216,22 +216,22 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-           <li class="main-products__item">
-            <div class="main-products__image">
+           <li class="main-products-list__item">
+            <div class="main-products-list__image">
               <a href="rice-small.html">
-                <img class="main-products__rice-small" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
+                <img class="main-products-list__rice-small" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
                 alt="Банка питания Кэт энерджи со вкусом риса объемом 500 г">
               </a>
             </div>
-            <div class="main-products__info">
+            <div class="main-products-list__info">
               <a href="rice-small.html">
-                <h3 class="main-products__item-title">cat energy slim 500 г</h3>
+                <h3 class="main-products-list__item-title">cat energy slim 500 г</h3>
               </a>
-              <table class="main-products__data">
+              <table class="main-products-list__data">
                 <tr>
                   <td>Объем</td>
                   <td>500 г</td>
@@ -246,19 +246,19 @@
                </tr>
               </table>
             </div>
-            <div class="main-products__booking">
-              <a class="main-products__link" href="booking.html">заказать</a>
+            <div class="main-products-list__booking">
+              <a class="main-products-list__link" href="booking.html">заказать</a>
             </div>
            </li>
-          <li class="main-products__item">
-            <div class="main-products__info main-products__info--promo">
-              <a class="main-products__link main-products__link--promo" href="booking.html">
+          <li class="main-products-list__item">
+            <div class="main-products-list__info main-products__info--promo">
+              <a class="main-products-list__link main-products__link--promo" href="booking.html">
                 <b>показать еще 100500 товаров</b>
               </a>
-              <p class="main-products__text">На самом деле вкусов гораздо больше!</p>
+              <p class="main-products-list__text">На самом деле вкусов гораздо больше!</p>
             </div>
-            <div class="main-products__booking main-products__booking--more">
-              <a class="main-products__link main-products__link--more" href="booking.html">показать все</a>
+            <div class="main-products-list__booking main-products-list__booking--more">
+              <a class="main-products-list__link main-products-list__link--more" href="booking.html">показать все</a>
             </div>
           </li>
         </ul>
@@ -333,7 +333,7 @@
         </ul>
       </section>
       <section class="promotion">
-        <p>Закажите все и получите чехол для кота в подарок!</p>
+        <a class="promotion__link" href="booking.html">Закажите все и получите чехол для кота в подарок!</a>
       </section>
       <section class="contacts">
         <div class="contacts__wrapper">
