создала less-файлы

--- a/source/form.html
+++ b/source/form.html
@@ -118,14 +118,14 @@
         </div>
       </form>
 
-      <section class="contacts">
-        <div class="contacts__wrapper">
-          <div class="contacts__text">
-            <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-            <address class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+      <section class="contact-us">
+        <div class="contact-us__wrapper">
+          <div class="contact-us__text">
+            <p class="contact-us__slogan">приглашаем к сотрудничеству дилеров!</p>
+            <address class="contact-us__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
-          <div class="contacts__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
-            <div class="contacts__pin-wrapper" aria-label="Указатель положения на карте"></div>
+          <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
+            <div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>
           </div>
         </div>
       </section>
