--- a/source/index.html
+++ b/source/index.html
@@ -43,21 +43,21 @@
         alt="Рекламный образец продукции компании Кэт энерд жи">
         <a href="form.html" class="intro__button button" type="button">Подобрать программу</a>
       </section>
-      <section class="program-selection">
-        <h2 class="program-selection__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
-        <ul class="program-selection__list">
-          <li class="program-selection__item">
-            <h3 class="program-selection__slim">похудение</h3>
-            <p class="program-selection__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
+      <section class="program-type">
+        <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
+        <ul class="program-type__list">
+          <li class="program-type__item">
+            <h3 class="program-type__slim">похудение</h3>
+            <p class="program-type__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
               деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="program-selection__link" href="catalog.html#slim">каталог slim</a>
+            <a class="program-type__link" href="catalog.html#slim">каталог slim</a>
           </li>
-          <li class="program-selection__item">
-            <h3 class="program-selection__pro">набор массы</h3>
-            <p class="program-selection__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+          <li class="program-type__item">
+            <h3 class="program-type__pro">набор массы</h3>
+            <p class="program-type__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
               Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="program-selection__link" href="catalog.html#pro">каталог pro</a>
+              <a class="program-type__link" href="catalog.html#pro">каталог pro</a>
           </li>
         </ul>
       </section>
@@ -113,14 +113,14 @@
           </p>
         </div>
       </article>
-      <section class="contacts">
-        <div class="contacts__wrapper">
-          <div class="contacts__text">
-            <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-            <address class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
+      <section class="contact-us">
+        <div class="contact-us__wrapper">
+          <div class="contact-us__text">
+            <p class="contact-us__slogan">приглашаем к сотрудничеству дилеров!</p>
+            <address class="contact-us__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
-          <div class="contacts__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
-            <div class="contacts__pin-wrapper" aria-label="Указатель положения на карте"></div>
+          <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
+            <div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>
           </div>
         </div>
       </section>
