--- a/source/form.html
+++ b/source/form.html
@@ -13,12 +13,13 @@
 
   <body class="container">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
+      target="_blank">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
           alt="Логотип сайта Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="button main-nav__toggle" type="button">Открыть меню</button>
+        <button class="button main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
