--- a/source/index.html
+++ b/source/index.html
@@ -12,13 +12,15 @@
 
 
   <body class="container">
+    <br><br>
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
+      target="_blank">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
           alt="Логотип сайта Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="button main-nav__toggle" type="button">Открыть меню</button>
+        <button class="button main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--current">
@@ -37,11 +39,13 @@
 
     <main class="page-main">
       <section class="intro">
-        <h1 class="intro__title">Функциональное питание для котов</h1>
-        <p class="intro__text">занялся собой? займись котом!</p>
+        <div class="intro__presentation">
+          <h1 class="intro__title">Функциональное питание для котов</h1>
+          <p class="intro__text">занялся собой? займись котом!</p>
+        </div>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
-        alt="Рекламный образец продукции компании Кэт энерд жи">
-        <a href="form.html" class="intro__button button" type="button">Подобрать программу</a>
+          alt="Рекламный образец продукции компании Кэт энерд жи">
+        <a href="form.html" class="button intro__button" type="button">Подобрать программу</a>
       </section>
       <section class="program-type">
         <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
