--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
           alt="Логотип сайта Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="button main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--current">
@@ -44,44 +44,46 @@
           <p class="intro__text">занялся собой? займись котом!</p>
         </div>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
-          alt="Рекламный образец продукции компании Кэт энерд жи">
-        <a href="form.html" class="button intro__button" type="button">Подобрать программу</a>
+          alt="Рекламный образец продукции компании Кэт энерджи">
+        <a href="form.html" class="button intro__button">Подобрать программу</a>
       </section>
       <section class="program-type">
         <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
-        <ul class="program-type__list">
-          <li class="program-type__item">
-            <h3 class="program-type__slim">похудение</h3>
-            <p class="program-type__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
+        <ul class="program-type__list program-type-list">
+          <li class="program-type-list__item">
+            <h3 class="program-type-list__slim">похудение</h3>
+            <p class="program-type-list__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
               деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="program-type__link" href="catalog.html#slim">каталог slim</a>
+            <a class="program-type-list__link" href="catalog.html#slim">каталог slim</a>
           </li>
-          <li class="program-type__item">
-            <h3 class="program-type__pro">набор массы</h3>
-            <p class="program-type__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+          <li class="program-type-list__item">
+            <h3 class="program-type-list__pro">набор массы</h3>
+            <p class="program-type-list__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
               Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="program-type__link" href="catalog.html#pro">каталог pro</a>
+              <a class="program-type-list__link" href="catalog.html#pro">каталог pro</a>
           </li>
         </ul>
       </section>
       <section class="advantages">
         <div class="advantages__wrapper">
           <h2 class="advantages__title">Как это работает</h2>
-        <ul class="advantages__list">
-          <li class="advantages__item advantages__item--nutrients">
-            <p class="advantages__description">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="advantages__item advantages__item--fast">
-            <p class="advantages__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="advantages__item advantages__item--modification">
-            <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="advantages__item advantages__item--improvement">
-            <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-          </li>
-        </ul>
+          <ul class="advantages__list advantages-list">
+            <li class="advantages-list__item advantages-list__item--nutrients">
+              <p class="advantages-list__description">Функциональное питание содержит только полезные питательные вещества.
+              </p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--fast">
+              <p class="advantages-list__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              </p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--modification">
+              <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="advantages-list__item advantages-list__item--improvement">
+              <p class="advantages-list__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ul>
         </div>
       </section>
       <article class="demonstration">
