делала верстку каталога

--- a/source/form.html
+++ b/source/form.html
@@ -12,6 +12,7 @@
 
 
   <body class="container">
+    <br><br>
     <header class="page-header">
       <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
       target="_blank">
@@ -126,7 +127,8 @@
             <address class="contact-us__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
           <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
-            <div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>
+            <img class="contact-us__map" src="img/bg-map-mobile@1x.png" alt="aдрес на карте компании Cat Energy">
+            <!--<div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>-->
           </div>
         </div>
       </section>
@@ -135,7 +137,8 @@
 
     <footer class="page-footer">
       <div class="page-footer__logo">
-        <a class="page-footer__logo-link">
+        <a class="page-footer__logo-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
+          target="_blank">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24"
             alt="Упрощённый логотип сайта Кэт энерджи">
         </a>
