--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
           </div>
           <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
             <img class="contact-us__map" src="img/bg-map-mobile@1x.png" alt="aдрес на карте компании Cat Energy">
-            <div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>
+            <!--<div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>-->
           </div>
         </div>
       </section>
@@ -141,7 +141,8 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__logo">
-          <a class="page-footer__logo-link">
+          <a class="page-footer__logo-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
+            target="_blank">
             <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24"
               alt="Упрощённый логотип сайта Кэт энерджи">
           </a>
@@ -150,7 +151,7 @@
           <h2 class="visually-hidden social__title">Кэт энерджи в соцсетях</h2>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Кэт
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank"><span class="visually-hidden">Кэт
                   энерджи в Вконтакте</span>
                 <?xml version="1.0" encoding="utf-8"?>
                 <!-- Generator: Adobe Illustrator 23.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -173,7 +174,7 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy" target="_blank"><span
                   class="visually-hidden">Кэт энерджи в Инстаграме</span>
                 <?xml version="1.0" encoding="utf-8"?>
                 <!-- Generator: Adobe Illustrator 23.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -193,7 +194,7 @@
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy" target="_blank"><span
                   class="visually-hidden">Кэт энерджи в Фейсбуке</span>
                 <?xml version="1.0" encoding="utf-8"?>
                 <!-- Generator: Adobe Illustrator 23.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
